Stop elements jumping on load

--- a/client/src/stylesheets/App.scss
+++ b/client/src/stylesheets/App.scss
@@ -1,4 +1,8 @@
 .App {
   margin: 0 auto;
   text-align: center;
+
+  .loading-container {
+    padding-top: calc(56.25%);
+  }
 }
