--- a/client/src/stylesheets/MainVideo.scss
+++ b/client/src/stylesheets/MainVideo.scss
@@ -1,5 +1,5 @@
 .MainVideo {
-  padding-bottom: 56.25%;
+  padding-top: 56.25%;
 }
 
 .youtube-player {
