--- a/client/src/stylesheets/Playlist.scss
+++ b/client/src/stylesheets/Playlist.scss
@@ -1,5 +1,6 @@
 .Playlist {
   overflow-x: scroll;
+  height: 169px;
 
   .playlist-container {
     div:first-child {
